# uu-quiz

./: .gitignore  README.md  central-counter.cabal  sqlite.db  uu-quiz.cabal
app/: Main.hs
frontend/: .gitignore  bower.json
frontend/src/: Main.purs
src/: Api.hs  Handler.hs  Main.hs  PSGenerator.hs
src/Backend/: Api.hs  Handler.hs  Model.hs
src/Frontend/: Api.hs  Client.hs  Handler.hs
src/Quiz/: Api.hs  Handler.hs  Model.hs
static/: api.js
test/: AppSpec.hs
