name:                central-counter
version:             0.1.0.0
synopsis:            Example project, putting servant-purescript, servant-subscriber and purescript-bridge to use.
homepage:            https://github.com/omelkonian/uu-quiz
author:              Orestis Melkonian
category:            Web,Quiz
build-type:          Simple
cabal-version:       >=1.10

executable central-counter
  main-is:             Main.hs
  other-modules:       Counter.WebAPI
  build-depends:       base >=4.8 && < 6.0
                     , aeson
                     , bytestring
                     , containers
                     , ghc-mod
                     , http-api-data
                     , http-types
                     , lens
                     , mainland-pretty
                     , monad-logger
                     , mtl
                     , purescript-bridge
                     , servant
                     , servant-server
                     , servant-purescript
                     , servant-subscriber
                     , stm
                     , text
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010

executable psGenerator
  main-is:             PSGenerator.hs
  other-modules:       Counter.WebAPI
  build-depends:       base >=4.8 && < 6.0
                     , aeson
                     , containers
                     , filepath
                     , ghc-mod
                     , http-api-data
                     , http-types
                     , lens
                     , mainland-pretty
                     , purescript-bridge
                     , servant
                     , servant-foreign
                     , servant-purescript
                     , servant-subscriber
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
