name:                uu-quiz
version:             0.1.0.0
synopsis:            Quiz software for the Utrecht University.
homepage:            https://github.com/omelkonian/uu-quiz
author:              Orestis Melkonian
category:            Web,Quiz
build-type:          Simple
cabal-version:       >=1.10

executable uu-quiz
  main-is:             Main.hs
  other-modules:       Quiz.Model
                     , Quiz.Api
                     , Quiz.Handler
  build-depends:       base >=4.8 && < 6.0
                     , aeson
                     , bytestring
                     , containers
                     , http-api-data
                     , http-types
                     , monad-logger
                     , mtl
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , string-conversions
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
