name: uu-quiz
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
homepage: https://github.com/omelkonian/uu-quiz
synopsis: Quiz software for the Utrecht University.
category: Web,Quiz
author: Orestis Melkonian

library
    exposed-modules:
        Api,
        Handler,
        Backend.Model,
        Backend.Api,
        Backend.Handler,
        Frontend.Client,
        Frontend.Api,
        Frontend.Handler
    build-depends:
        base >=4.7 && <5,
        aeson -any,
        bytestring -any,
        containers -any,
        http-api-data -any,
        http-types -any,
        monad-logger -any,
        mtl -any,
        servant -any,
        servant-server >=0.9.1,
        servant-blaze >=0.7.1,
        blaze-html -any,
        servant-client -any,
        servant-js -any,
        js-jquery -any,
        text -any,
        transformers -any,
        wai -any,
        warp -any,
        persistent -any,
        persistent-template -any,
        persistent-sqlite -any,
        -- conduit -any,
        resourcet -any,
        string-conversions -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable uu-quiz
    main-is: Main.hs
    build-depends:
        base >=4.8 && <6.0,
        uu-quiz -any,
        directory -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall

test-suite client-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.7 && <5,
        uu-quiz -any,
        hspec -any,
        servant-client -any,
        servant-server >=0.9.1,
        warp >=3.2.4,
        wai >=3.2.1,
        http-client -any,
        http-types -any,
        mockery -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        AppSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
